Updating to include a very basic benchmark.

--- a/Mustachio.Tests/Mustachio.Tests.csproj
+++ b/Mustachio.Tests/Mustachio.Tests.csproj
@@ -49,6 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PerfHarness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ParserFixture.cs" />
     <Compile Include="TemplateFixture.cs" />
