--- a/Mustachio/Mustachio.csproj
+++ b/Mustachio/Mustachio.csproj
@@ -53,7 +53,8 @@
     <Compile Include="InferredTemplateModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Parser.cs" />
-    <Compile Include="TemplateParseException.cs" />
+    <Compile Include="IndexedParseException.cs" />
+    <Compile Include="ParseException.cs" />
     <Compile Include="Tokenizer.cs" />
     <Compile Include="TokenPair.cs" />
   </ItemGroup>
