--- a/Mustachio/Mustachio.nuspec
+++ b/Mustachio/Mustachio.nuspec
@@ -6,6 +6,7 @@
 		<authors>wildbit</authors>
 		<owners>wildbit</owners>
 		<projectUrl>https://github.com/wildbit/mustachio</projectUrl>
+		<iconUrl>https://raw.githubusercontent.com/wildbit/mustachio/master/mustachio%402x.png?token=AACKAYixw-BltuR0nu9GbhOUjcyl95QWks5VyKjawA%3D%3D</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>Mustache templating, with just a little more flavor.</description>
 		<copyright>Copyright 2015</copyright>
