--- a/Mustachio/Mustachio.csproj
+++ b/Mustachio/Mustachio.csproj
@@ -51,7 +51,7 @@
     <Compile Include="ContextObject.cs" />
     <Compile Include="ExtendedParseInformation.cs" />
     <Compile Include="InferredTemplateModel.cs" />
-    <Compile Include="ParsingOptions.cs" />
+    <Compile Include="ParserOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="IndexedParseException.cs" />
