--- a/Mustachio.Tests/Mustachio.Tests.csproj
+++ b/Mustachio.Tests/Mustachio.Tests.csproj
@@ -54,6 +54,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ParserCollectionFixture.cs" />
     <Compile Include="PerfHarness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ParserFixture.cs" />
