--- a/Mustachio/Mustachio.csproj
+++ b/Mustachio/Mustachio.csproj
@@ -46,12 +46,13 @@
     <Compile Include="ContextCollection.cs" />
     <Compile Include="ContextObject.cs" />
     <Compile Include="ExtendedParseInformation.cs" />
+    <Compile Include="Helper\StreamExtentions.cs" />
     <Compile Include="InferredTemplateModel.cs" />
     <Compile Include="ParserOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="IndexedParseException.cs" />
-    <Compile Include="ParseException.cs" />
+    <Compile Include="MustachioException.cs" />
     <Compile Include="Tokenizer.cs" />
     <Compile Include="TokenPair.cs" />
   </ItemGroup>
