--- a/Mustachio.Tests/Mustachio.Tests.csproj
+++ b/Mustachio.Tests/Mustachio.Tests.csproj
@@ -54,11 +54,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ParserCancellationional.cs" />
     <Compile Include="ParserCollectionFixture.cs" />
     <Compile Include="PerfHarness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ParserFixture.cs" />
     <Compile Include="TemplateFixture.cs" />
+    <Compile Include="WhitespaceNormalizer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mustachio\Mustachio.csproj">
