--- a/Morestachio/Morestachio.csproj
+++ b/Morestachio/Morestachio.csproj
@@ -44,6 +44,9 @@
     <DelaySign>false</DelaySign>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations, Version=10.2.1.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <HintPath>..\packages\JetBrains.Annotations.10.2.1\lib\net\JetBrains.Annotations.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -63,8 +66,6 @@
     <Compile Include="Parser.cs" />
     <Compile Include="IndexedParseException.cs" />
     <Compile Include="MustachioException.cs" />
-    <Compile Include="TemplateGeneration.cs" />
-    <Compile Include="TemplateGenerationWithCancel.cs" />
     <Compile Include="Tokenizer.cs" />
     <Compile Include="TokenPair.cs" />
     <Compile Include="TokenType.cs" />
