--- a/Morestachio/Morestachio.csproj
+++ b/Morestachio/Morestachio.csproj
@@ -61,7 +61,9 @@
     <Compile Include="ExtendedParseInformation.cs" />
     <Compile Include="FormatTemplateElement.cs" />
     <Compile Include="FormatTemplateElementDelegate.cs" />
+    <Compile Include="Formatter\FormatterPart.cs" />
     <Compile Include="Formatter\MultiFormatterInfo.cs" />
+    <Compile Include="Helper\FormatterMatcher.cs" />
     <Compile Include="Helper\StreamExtentions.cs" />
     <Compile Include="InferredTemplateModel.cs" />
     <Compile Include="ParserOptions.cs" />
