--- a/Morestachio/Morestachio.csproj
+++ b/Morestachio/Morestachio.csproj
@@ -58,19 +58,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\FormatterArgumentName.cs" />
+    <Compile Include="Attributes\FormatterArgumentNameAttribute.cs" />
+    <Compile Include="Attributes\RestParameterAttribute.cs" />
     <Compile Include="Attributes\SourceObjectAttribute.cs" />
+    <Compile Include="CanExecute.cs" />
+    <Compile Include="Formatter\DisabledFormatterMatcher.cs" />
+    <Compile Include="Formatter\FormatterMatcherExtensions.cs" />
+    <Compile Include="Formatter\IFormatterMatcher.cs" />
     <Compile Include="Framework\ContextCollection.cs" />
     <Compile Include="ContextObject.cs" />
     <Compile Include="ExtendedParseInformation.cs" />
     <Compile Include="FormatTemplateElement.cs" />
-    <Compile Include="Framework\FormatTemplateElementDelegate.cs" />
     <Compile Include="Formatter\FormatterPart.cs" />
     <Compile Include="Formatter\MultiFormatterInfo.cs" />
     <Compile Include="Formatter\FormatterMatcher.cs" />
-    <Compile Include="Helper\AsyncBridge.cs" />
+    <Compile Include="Helper\AsyncHelper.cs" />
     <Compile Include="Helper\StreamExtentions.cs" />
     <Compile Include="Framework\InferredTemplateModel.cs" />
+    <Compile Include="MultiFormatterInfoCollection.cs" />
     <Compile Include="ParserOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Parser.cs" />
