--- a/Morestachio/Morestachio.csproj
+++ b/Morestachio/Morestachio.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Formatter\FormatterMatcherExtensions.cs" />
     <Compile Include="Formatter\IFormatterMatcher.cs" />
     <Compile Include="Framework\ContextCollection.cs" />
-    <Compile Include="ContextObject.cs" />
+    <Compile Include="Framework\ContextObject.cs" />
     <Compile Include="ExtendedParseInformation.cs" />
     <Compile Include="FormatTemplateElement.cs" />
     <Compile Include="Formatter\FormatterPart.cs" />
