--- a/Morestachio.Formatter.Framework.Tests/packages.config
+++ b/Morestachio.Formatter.Framework.Tests/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="JetBrains.Annotations" version="2018.2.1" targetFramework="net471" />
   <package id="NUnit" version="3.11.0" targetFramework="net46" />
+  <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net471" />
 </packages>
