--- a/Morestachio.Tests/Morestachio.Tests.csproj
+++ b/Morestachio.Tests/Morestachio.Tests.csproj
@@ -55,13 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ParserCancellationional.cs" />
-    <Compile Include="ParserCollectionFixture.cs" />
-    <Compile Include="PerfTests\PerfHarness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ParserFixture.cs" />
-    <Compile Include="TemplateFixture.cs" />
-    <Compile Include="WhitespaceNormalizer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Morestachio\Morestachio.csproj">
@@ -76,6 +70,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <Import Project="..\Morestachio.Tests.Core\Morestachio.Tests.Core.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
