--- a/Morestachio/Morestachio.csproj
+++ b/Morestachio/Morestachio.csproj
@@ -40,7 +40,8 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>morestachioKey.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <DelaySign>false</DelaySign>
@@ -58,37 +59,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\FormatterArgumentNameAttribute.cs" />
-    <Compile Include="Attributes\RestParameterAttribute.cs" />
-    <Compile Include="Attributes\SourceObjectAttribute.cs" />
-    <Compile Include="CanExecute.cs" />
-    <Compile Include="Formatter\DisabledFormatterMatcher.cs" />
-    <Compile Include="Formatter\FormatterMatcherExtensions.cs" />
-    <Compile Include="Formatter\IFormatterMatcher.cs" />
-    <Compile Include="Framework\ContextCollection.cs" />
-    <Compile Include="Framework\ContextObject.cs" />
-    <Compile Include="ExtendedParseInformation.cs" />
-    <Compile Include="FormatTemplateElement.cs" />
-    <Compile Include="Formatter\FormatterPart.cs" />
-    <Compile Include="Formatter\MultiFormatterInfo.cs" />
-    <Compile Include="Formatter\FormatterMatcher.cs" />
-    <Compile Include="Helper\AsyncHelper.cs" />
-    <Compile Include="Helper\StreamExtentions.cs" />
-    <Compile Include="Framework\InferredTemplateModel.cs" />
-    <Compile Include="MultiFormatterInfoCollection.cs" />
-    <Compile Include="ParserOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Parser.cs" />
-    <Compile Include="Framework\IndexedParseException.cs" />
-    <Compile Include="Framework\MustachioException.cs" />
-    <Compile Include="Framework\Tokenizer.cs" />
-    <Compile Include="Framework\TokenPair.cs" />
-    <Compile Include="Framework\TokenType.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="morestachioKey.snk" />
-    <None Include="packages.config" />
-  </ItemGroup>
+  <Import Project="..\Morestachio.Core\Morestachio.Core.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
