--- a/Mustachio.Tests/Mustachio.Tests.csproj
+++ b/Mustachio.Tests/Mustachio.Tests.csproj
@@ -22,6 +22,9 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.*" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="xunit" Version="1.9.2" />
     <PackageReference Include="xunit.extensions" Version="1.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.1.0" />
