Add publish script (WIP), and update dotnet sdk config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 sudo: false
 language: csharp
+dist: trusty
 mono: none
-dotnet: 2.2.107
+dotnet: 2.1
 script:
   - dotnet restore
   - dotnet build
