Added RepositoryUrl and RepositoryType to Nuget Package

--- a/Mustachio/Mustachio.csproj
+++ b/Mustachio/Mustachio.csproj
@@ -18,6 +18,8 @@
     <PackageIconUrl>https://raw.githubusercontent.com/wildbit/mustachio/master/mustachio%402x.png?token=AACKAYixw-BltuR0nu9GbhOUjcyl95QWks5VyKjawA%3D%3D</PackageIconUrl>
     <PackageId>Mustachio</PackageId>
     <PackageProjectUrl>https://github.com/wildbit/mustachio</PackageProjectUrl>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/wildbit/mustachio.git</RepositoryUrl>
     <PackageTags>Library</PackageTags>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
